apps/paperless/gotenberg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-gotenberg
  template:
    metadata:
      labels:
        app: paperless-gotenberg
    spec:
      containers:
        - name: gotenberg
          image: gotenberg/gotenberg@sha256:67097317623a503ba2a6a7e9ae8db6929a1f7e1bbd88077bacf2d325fbdab923
          ports:
            - name: http
              containerPort: 3000
