apps/paperless/tika-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-tika
  template:
    metadata:
      labels:
        app: paperless-tika
    spec:
      containers:
        - name: tika
          image: apache/tika:2.9.1.0
          ports:
            - name: http
              containerPort: 9998
