apps/paperless/gotenberg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  namespace: paperless
spec:
  selector:
    app: paperless-gotenberg
  ports:
    - name: http
      port: 3000
      targetPort: http
