apps/paperless/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
  namespace: paperless
spec:
  selector:
    app: paperless-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
